# shared-data

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: experiment.rs
src/: allocator.rs  atomic_shared.rs  atomic_shared_address.rs  atomic_shared_address_range.rs  lib.rs  object_offset.rs  object_size.rs  shared_address.rs  shared_address_range.rs  shared_box.rs  shared_channel.rs  shared_mem_ref.rs  shared_option.rs  shared_rc.rs  shared_vec.rs  shmem_id.rs  shmem_name.rs  unsafe_code.rs
tests/: integration_test.rs
tests/harness/: mod.rs
tests/integration/: child.rs  harness.rs  mod.rs  tests.rs
