[package]
name = "sharing-is-caring"
version = "0.1.0"
authors = ["Alan Jeffrey <ajeffrey@mozilla.com>"]
edition = "2018"

[features]
ipc = ["ipc-channel", "serde"]

[dependencies]
shared_memory = "0.8"
rand = "0.7"
ipc-channel = { version = "0.12", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

