[package]
name = "ipc-experiments"
version = "0.1.0"
authors = ["Alan Jeffrey <ajeffrey@mozilla.com>"]
edition = "2018"

[lib]
name = "experiments"
path = "src/lib.rs"

[[bin]]
name = "child"
path = "tests/integration/child.rs"
test = false

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[features]
ipc = ["ipc-channel", "serde"]

[dependencies]
shared_memory = "0.8"
rand = "0.7"
lazy_static = "1.3"
arrayvec = "0.4"
log = "0.4"
num-traits = "0.2"
num-derive = "0.2"
ipc-channel = { version = "0.12", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
no-panic = { version = "0.1", optional = true }
