[package]
name = "shared-data"
version = "0.0.2"
authors = ["Alan Jeffrey <ajeffrey@mozilla.com>"]
edition = "2018"
repository = "https://github.com/asajeffrey/shared-data"
license = "MPL-2"
description = "A library for data structures living in shared memory."

[lib]
path = "src/lib.rs"

[[bin]]
name = "child"
path = "tests/integration/child.rs"
test = false

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[features]
ipc = ["ipc-channel", "serde"]

[dependencies]
array-macro = "1.0.4"
atom = "0.3"
owning_ref = "0.4"
shared_memory = "0.8"
rand = "0.7"
lazy_static = "1.3"
arrayvec = "0.4"
log = "0.4"
env_logger = "0.4"
num-traits = "0.2"
num-derive = "0.2"
ipc-channel = { version = "0.12", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
no-panic = { version = "0.1", optional = true }
